--- a/RFM.ipynb
+++ b/RFM.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "4     4/8/11  CA-2011-100363       Jim Mitchum           21"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "Adam Hart             34         10            3249"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,66 +284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>recency</th>\n",
-       "      <th>frequency</th>\n",
-       "      <th>monetary_value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0.25</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1145.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.50</th>\n",
-       "      <td>75.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2257.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.75</th>\n",
-       "      <td>183.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3784.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      recency  frequency  monetary_value\n",
-       "0.25     30.0        5.0          1145.0\n",
-       "0.50     75.0        6.0          2257.0\n",
-       "0.75    183.0        8.0          3784.0"
+       "{'recency': {0.25: 30.0, 0.5: 75.0, 0.75: 183.0},\n",
+       " 'frequency': {0.25: 5.0, 0.5: 6.0, 0.75: 8.0},\n",
+       " 'monetary_value': {0.25: 1145.0, 0.5: 2257.0, 0.75: 3784.0}}"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,13 +303,14 @@
    "source": [
     "# Создаю вспомогательную таблицу, в которую и будем вносить все дальнейшие изменения.\n",
     "quantiles = rfmTable.quantile(q=[0.25,0.5,0.75])\n",
+    "quantiles = quantiles.to_dict()\n",
     "rfmSegmentation = rfmTable\n",
     "quantiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +479,7 @@
        "Dean Katz                   1      111  "
       ]
      },
-     "execution_count": 157,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
